<resources>
    <string name="app_name">PointRunner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="labelTitleLogin">PointRunner</string>
    <string name="action_register">Sign up</string>
    <string name="login_fuckup">Incorrect login or password</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="register_RetypePwd">Retype password</string>

    <string name="title_activity_assignment_adder">AssignmentAdder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="labelAssignmentAdder">Create new assignment</string>
    <string name="prompt_asgnName">Name</string>
    <string name="prompt_asgnDescr">Description</string>
    <string name="asgnHintDistance">Maximum distance per user (meters)</string>
    <string name="asgnMaxUsersHint">Maximum relays</string>
    <string name="labelAsgnAdd">Add</string>
    <string name="set_start">Set start</string>
    <string name="set_finish">Set finish</string>
</resources>
